--- a/src/Component/Sidebar/Sidebar.css
+++ b/src/Component/Sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 #sidebar {
-    background-color: rgb(255, 49, 49);
+    background-color: #f27f0c ;
     width: 250px;
     height: 100vh;
     text-align: center;
