--- a/src/Component/Profile/Profile.css
+++ b/src/Component/Profile/Profile.css
@@ -1,6 +1,7 @@
 .Profile-img {
-    background-color: rgb(160, 160, 160);
+    background-color: white ;
     width : 120px;
     height: 120px;
     border-radius: 100%;
+    font-size: 30px;
 }
